<resources>
    <string name="app_name">Nadira</string>
    <string name="logo">logo_deskripsi</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="contoh_email">contoh@gmail.com</string>
    <string name="password">Password</string>
    <string name="minimum_password">Password tidak boleh kurang dari 6</string>
    <string name="auth_failed">Gagal Login, Cek email dan password anda.</string>
    <string name="sign_up_btn">SignUp</string>
    <string name="lbl_forgot_password">Lupa Password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="new_pass">New Password</string>
    <string name="btn_remove">Remove</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Remove User</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="email_id">Email ID</string>
    <string name="prompt_password">Enter Your Password</string>
    <string name="btn_change">Cange</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location_permission">99</string>
    <string name="text_location_permission">99</string>
    <string name="ok">1</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>
    <string name="daftar">daftar</string>

</resources>
