<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/nadira"
            android:contentDescription="@string/logo"
            />

        <!--Edit Text Login-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginBottom="10dp"
            android:hint="@string/contoh_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

        <!--Login Btn-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:id="@+id/btn_login"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="162dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:id="@+id/btn_reset_password"
            android:background="@null"
            android:textColor="#ffff"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:id="@+id/signUp"
            android:background="@null"
            android:textColor="#ffff"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="Skip"
            android:id="@+id/btn_skip"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>